--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=AINO_1
+server.port=3000
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=AINO;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=aptx48698788
