--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=AINO
 server.port=8080
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=testAINO1;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=testAINO;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
