--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.servlet.multipart.max-request-size=5MB
 ghtk.api.base-url=https://services.giaohangtietkiem.vn
 ghtk.api.token=7WK3Lvj9iu7tG5OOh3aFx2BYHrewGEsvRcVoTL
 
+zalo.app_id=2554
+zalo.key1=sdngKKJmqEMzvh5QQcdD2A9XBSKUNaYn
+zalo.key2=trMrHtvjo6myautxDUiAcYsVtaeQ8nhf
+zalo.endpoint=https://sb-openapi.zalopay.vn/v2/create
+
