--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "cloudinary": "^2.5.1",
     "crypto-js": "^4.2.0",
     "express": "^4.21.1",
@@ -25,7 +25,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.14",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xiao": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start ",
