--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4",
     "xiao": "^0.0.1"
